# FileGuard

./: .gitignore  AGENTS.md  README.md  config.example.yaml  config.yaml  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
docs/: architecture.md  demo_guide.md  experiment_log.md  final_delivery.md  frontend_guide.md
experiments/: run_acceptance.py  run_demo.py  simulate_normal.py  simulate_ransomware.py  simulate_sensitive.py
fileguard/: __init__.py
fileguard-project/: README.md  pyproject.toml
fileguard-project/experiments/: simulate_ransomware.py
fileguard-project/experiments/sandbox/config/: app_settings.ini  credentials.key  database.conf
fileguard-project/experiments/sandbox/documents/: doc_03.txt  doc_04.txt  doc_05.txt  doc_06.txt  doc_07.txt  doc_08.txt  doc_09.txt
fileguard-project/experiments/sandbox/financial/: audit_notes.txt  forecast.txt  revenue_q1.csv
fileguard-project/fileguard/: __main__.py  cli.py  config.py
fileguard-project/fileguard/analyzers/: base.py  entropy.py  frequency.py  fuzzy_hash.py  honeypot.py
fileguard-project/fileguard/capture/: watcher.py
fileguard-project/fileguard/output/: __init__.py  dashboard.py  logger.py  report.py
fileguard-project/fileguard/scoring/: __init__.py  alert.py  scorer.py
fileguard-project/tests/: test_snapshot.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
templates/: report.html
tests/: __init__.py  test_alert_escalation.py  test_analyzers_factory.py  test_api_contract.py  test_api_server.py  test_api_stream.py  test_auto_restore.py  (+16 more)
(+199 files in other folders)
