[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileguard"
version = "0.1.0"
description = "基于多维行为分析的文件安全风险感知与防护验证系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "matplotlib>=3.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
fileguard = "fileguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fileguard*"]
